Enable preview features in tests