@@ -93,6 +93,7 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.22.2</version>
 				<configuration>
+					<argLine>--enable-preview</argLine>
 					<properties>
 						<configurationParameters>
 							junit.jupiter.execution.parallel.enabled=true
